# manim-agent

./: .env.example  .gitignore  BLAXEL_QUICKSTART.md  BLAXEL_SANDBOX_SETUP.md  CHANGELOG.md  DEPLOY_TO_HF.md  Dockerfile.sandbox  ELEVENLABS_SETUP.md  GRADIO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MIGRATION_TO_BLAXEL.md  Makefile.sandbox  PERSISTENT_SANDBOX_SETUP.txt  QUICKSTART.md  README.md  SANDBOX_FIX_SUMMARY.txt  app.py  blaxel.toml  deploy_sandbox.sh  deploy_to_hf.sh  entrypoint.sh  example.py  main.py  main_new.py  orchestrator.py  orchestrator.py.new  pyproject.toml  requirements.txt  setup.sh  verify_sandbox_setup.py
manim_mcp/: README.md  __init__.py  server.py
manim_mcp/tools/: __init__.py  audio.py  code_generation.py  planning.py  quiz.py  rendering.py  video.py  vision.py
mcp_servers/: __init__.py  creative.py  renderer.py
neuroanim/: __init__.py
neuroanim/agents/: __init__.py  nodes.py
neuroanim/graph/: __init__.py  state.py  workflow.py
test_output/videos/test_simple/720p30/partial_movie_files/SimpleScene/: partial_movie_file_list.txt
tests/: test_imports.py
utils/: __init__.py  hf_wrapper.py  tts.py
